<resources>
    <string name="app_name">Silver Screen</string>
    <string name="title_home">Spotlight</string>
    <string name="title_movies">Movies</string>
    <string name="title_theaters">Theaters</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="title_account">Account</string>
    <string name="facebook_app_id">1285316381648764</string>
    <string name="fb_login_protocol_scheme">fb1285316381648764</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friends_list">FriendsList</string>

</resources>
