<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_movies"/>

    <item
        android:id="@+id/navigation_theaters"
        android:icon="@drawable/ic_local_activity_black_10dp"
        android:title="@string/title_theaters"/>

    <item
        android:id="@+id/navigation_recommendations"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recommendation"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_account"/>

</menu>
