<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.cs371m.silverscreen.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="edu.cs371m.silverscreen.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_theaters"
        android:name="edu.cs371m.silverscreen.ui.theaters.TheatersFragment"
        android:label="@string/title_theaters"
        tools:layout="@layout/fragment_theaters" />

    <fragment
        android:id="@+id/navigation_recommendations"
        android:name="edu.cs371m.silverscreen.ui.recommendation.RecommendationsFragmentFragment"
        android:label="@string/title_recommendation"
        tools:layout="@layout/fragment_recommendations" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="edu.cs371m.silverscreen.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>